# Project-Currency-Conversion

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  .user.yml  README.md  dbt_project.yml  profiles.yml  pyproject.toml  requirements.txt
models/marts/KPIs/: _kpis__models.yml  best_selling_products_by_category.sql  customer_ltv.sql  customer_repeat_rate.sql  geographical_distribution.sql  most_common_product_bundles.sql  product_performance_over_time.sql  sales_by_currency.sql  sales_per_day_and_average_ticket.sql  stock_health.sql  vip_or_non_vip_customer_behavior.sql
models/marts/analytics/: _kpis__models.yml  best_selling_products_by_category.sql  customer_ltv.sql  customer_repeat_rate.sql  dim__customers.sql  dim__exchange_rates.sql  dim__products.sql  dim__stores.sql  fct__sales.sql  geographical_distribution.sql  most_common_product_bundles.sql  product_performance_over_time.sql  sales_by_category_and_period.sql  sales_by_currency.sql  sales_per_day_and_average_ticket.sql  stock_health.sql  vip_or_non_vip_customer_behavior.sql
models/marts/finance/: _finance__models.yml  best_selling_products_by_category.sql  best_selling_products_by_category.yml  fct__sales.sql  fct_sales__finance_metrics_usd.sql
models/marts/marketing/: _marketing__models.yml  dim__products.sql  (+1 more)
models/staging/: _raw_simulation__models.yml  _raw_simulation__source.yml  stg_raw_simulation__customer_product_mapping.sql  stg_raw_simulation__customers.sql  stg_raw_simulation__exchange_rates.sql  stg_raw_simulation__products.sql  stg_raw_simulation__sales.sql  stg_raw_simulation__stock.sql
(+7 files in other folders)
