[tool.poetry]
name = "project-currency-conversion"
version = "0.1.0"
description = ""
authors = ["Yan Robim <yanrobim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9,<3.11"
dbt-core = "^1.9.4"
dbt-snowflake = "^1.9.2"
sqlfluff-templater-dbt = "^3.4.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
sqlfluff = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
